# SillyStateMachine.py

./: README.md  SillyStateMachine.py  run_tests.bat  setup.cfg  setup.py  test_silly.py  upload.bat
.github/workflows/: pytest-macos.yaml  pytest-ubuntu.yaml  pytest-windows.yaml  pytest.yaml  python-publish.yml
SillyStateMachine/: __init__.py
