[metadata]
name = SillyStateMachine
version = 0.1.0
author = Darius Fieschko
author_email = dfieschko@gmail.com
description = A simple, threaded finite state machine that looks up function pointers in a dict.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dfieschko/SillyStateMachine
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = SillyStateMachine
